force-app/main/default/objects/Shop__c/Shop__c.object-meta.xml
<CustomObject>
    <description>Represents a shop that rents camping equipment</description>
    <label>Shop</label>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>