force-app/main/default/objects/Shop__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Contact email for the shop</description>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>