force-app/main/default/objects/Shop__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Contact phone for the shop</description>
    <label>Contact Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>